# MikesGradingTool

./: .gitignore  CLAUDE.md  README.md  TODO.md  extract_canvas_assignments.py  find_btt_links.py  make.zsh  mikes_config  pyproject.toml
mikesgradingtool/: __init__.py  __main__.py
mikesgradingtool/Canvas/: CanvasAccessibility.py  CanvasHelper.py
mikesgradingtool/GitHub/: GitHubHelper.py
mikesgradingtool/HomeworkHelpers/: CopyRevisionFeedback.py  CopyTemplateToStudents.py  OrganizeSubmissions.py
mikesgradingtool/MiscFiles/: MiscFilesHelper.py
mikesgradingtool/SubmissionHelpers/: StudentSubmission.py  StudentSubmissionList.py  StudentSubmissionListCollection.py
mikesgradingtool/utils/: config_json.py  diskcache_utils.py  misc_utils.py  my_logging.py  print_utils.py
